# c-projekte

./: CMakeLists.txt  RockPaperScissor  RockPaperScissor.c  Snake.c  a.c  b.c  b.h  dynamicMemory  dynamicMemory.c  foo  helloWorld  helloWorld.c  readFunctions.c  readFunctions.h  structTest  structTest.c  userInput
